# CuReduceTest

./: .gitignore  CMakeLists.txt  myreduce.cu  myreduce.h  readme.md  t.cpp
